--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -4,6 +4,10 @@ name: Release Pipeline
 on: [ workflow_call, workflow_dispatch ]
 
 
+env:
+  BUILD_SW_VERSION: 6.4.16.0
+
+
 jobs:
 
   release:
@@ -21,8 +25,8 @@ jobs:
 
       - name: Start Docker
         run: |
-          docker run --rm --name shop -d dockware/dev:6.4.16.0
-          sleep 30
+          docker run --rm --name shop -d dockware/dev:$BUILD_SW_VERSION
+          sleep 20
           docker logs shop
 
       - name: Upload into Docker
