--- a/.github/workflows/ci_pipe.yml
+++ b/.github/workflows/ci_pipe.yml
@@ -144,7 +144,7 @@ jobs:
         run: make phpmin -B
 
   phpunit:
-    name: Unit Tests | PHP ${{ matrix.php }}
+    name: PHPUnit
     needs: install
     runs-on: ubuntu-latest
     steps:
@@ -169,7 +169,7 @@ jobs:
         run: make phpunit -B
 
   infection:
-    name: Mutation Tests | PHP ${{ matrix.php }}
+    name: Mutation Tests
     needs: phpunit
     runs-on: ubuntu-latest
     steps:
@@ -194,7 +194,7 @@ jobs:
         run: make infection -B
 
   phpstan:
-    name: Static Analyzers
+    name: PHPStan
     needs: install
     runs-on: ubuntu-latest
     steps:
