--- a/.github/workflows/pr_pipe.yml
+++ b/.github/workflows/pr_pipe.yml
@@ -142,7 +142,7 @@ jobs:
         run: make phpmin -B
 
   phpunit:
-    name: Unit Tests | PHP ${{ matrix.php }}
+    name: PHPUnit
     needs: install
     runs-on: ubuntu-latest
     steps:
@@ -167,7 +167,7 @@ jobs:
         run: make phpunit -B
 
   infection:
-    name: Mutation Tests | PHP ${{ matrix.php }}
+    name: Mutation Tests
     needs: phpunit
     runs-on: ubuntu-latest
     steps:
@@ -192,7 +192,7 @@ jobs:
         run: make infection -B
 
   phpstan:
-    name: Static Analyzers
+    name: PHPStan
     needs: install
     runs-on: ubuntu-latest
     steps:
