--- a/.github/workflows/ci_pipe.yml
+++ b/.github/workflows/ci_pipe.yml
@@ -102,148 +102,9 @@ jobs:
 
   # ------------------------------------------------------------------------------------------------------------------------
 
-  php_checks:
-    name: PHP Syntax Checks
-    needs: install
-    runs-on: ubuntu-latest
-    steps:
-      - name: Clone Code
-        uses: actions/checkout@v2
-
-      - name: Setup PHP
-        uses: shivammathur/setup-php@v2
-        with:
-          php-version: 7.4
-
-      - name: PHP Syntax Checks
-        run: make phpcheck -B
-
-  php_min:
-    name: PHP 7.2 Compatibility
-    needs: install
-    runs-on: ubuntu-latest
-    steps:
-      - name: Clone Code
-        uses: actions/checkout@v2
-
-      - name: Setup PHP
-        uses: shivammathur/setup-php@v2
-        with:
-          php-version: 7.4
-
-      - name: Mount Dev-Dependencies Cache
-        uses: actions/cache@v3
-        with:
-          key: cache-dependencies
-          path: |
-            src/Resources/app/administration/node_modules
-            src/Resources/app/storefront/node_modules
-            vendor
-
-      - name: PHP Compatibility Checks
-        run: make phpmin -B
-
-  phpunit:
-    name: PHPUnit
-    needs: install
-    runs-on: ubuntu-latest
-    steps:
-      - name: Clone Code
-        uses: actions/checkout@v2
-
-      - name: Setup PHP
-        uses: shivammathur/setup-php@v2
-        with:
-          php-version: 7.4
-
-      - name: Mount Dev-Dependencies Cache
-        uses: actions/cache@v3
-        with:
-          key: cache-dependencies
-          path: |
-            src/Resources/app/administration/node_modules
-            src/Resources/app/storefront/node_modules
-            vendor
-
-      - name: Run PHPUnit
-        run: make phpunit -B
-
-  infection:
-    name: Mutation Tests
-    needs: phpunit
-    runs-on: ubuntu-latest
-    steps:
-      - name: Clone Code
-        uses: actions/checkout@v2
-
-      - name: Setup PHP
-        uses: shivammathur/setup-php@v2
-        with:
-          php-version: 7.4
-
-      - name: Mount Dev-Dependencies Cache
-        uses: actions/cache@v3
-        with:
-          key: cache-dependencies
-          path: |
-            src/Resources/app/administration/node_modules
-            src/Resources/app/storefront/node_modules
-            vendor
-
-      - name: Run Infection
-        run: make infection -B
-
-  phpstan:
-    name: PHPStan
-    needs: install
-    runs-on: ubuntu-latest
-    steps:
-
-      - name: Clone Code
-        uses: actions/checkout@v2
-
-      - name: Setup PHP
-        uses: shivammathur/setup-php@v2
-        with:
-          php-version: 7.4
-
-      - name: Mount Dev-Dependencies Cache
-        uses: actions/cache@v3
-        with:
-          key: cache-dependencies
-          path: |
-            src/Resources/app/administration/node_modules
-            src/Resources/app/storefront/node_modules
-            vendor
-
-      - name: Run PHPStan
-        run: make stan -B
-
-  phpcsfixer:
-    name: PHP CS Fixer
-    needs: install
-    runs-on: ubuntu-latest
-    steps:
-
-      - name: Clone Code
-        uses: actions/checkout@v2
-
-      - name: Setup PHP
-        uses: shivammathur/setup-php@v2
-        with:
-          php-version: 7.4
-
-      - name: Mount Dev-Dependencies Cache
-        uses: actions/cache@v3
-        with:
-          key: cache-dependencies
-          path: |
-            src/Resources/app/administration/node_modules
-            src/Resources/app/storefront/node_modules
-            vendor
-
-      - name: Run PHP CS Fixer
-        run: make csfix -B
+  php_tests:
+    uses: ./.github/workflows/pipelines/php.yml
+    needs: [ install ]
 
   # ------------------------------------------------------------------------------------------------------------------------
 
