--- a/.github/workflows/ci_pipe.yml
+++ b/.github/workflows/ci_pipe.yml
@@ -40,121 +40,20 @@ jobs:
 
   # ------------------------------------------------------------------------------------------------------------------------
 
-  jest:
-    name: Jest Tests
-    needs: install
-    runs-on: ubuntu-latest
-    steps:
-      - name: Clone Code
-        uses: actions/checkout@v2
-
-      - name: Mount Dev-Dependencies Cache
-        uses: actions/cache@v3
-        with:
-          key: cache-dependencies
-          path: |
-            src/Resources/app/administration/node_modules
-            src/Resources/app/storefront/node_modules
-            vendor
-
-      - name: Run Jest
-        run: make jest -B
-
-  eslint:
-    name: ESLint
-    needs: install
-    runs-on: ubuntu-latest
-    steps:
-      - name: Clone Code
-        uses: actions/checkout@v2
-
-      - name: Mount Dev-Dependencies Cache
-        uses: actions/cache@v3
-        with:
-          key: cache-dependencies
-          path: |
-            src/Resources/app/administration/node_modules
-            src/Resources/app/storefront/node_modules
-            vendor
-
-      - name: Run ESLint
-        run: make eslint -B
-
-  stylelint:
-    name: Stylelint
-    needs: install
-    runs-on: ubuntu-latest
-    steps:
-      - name: Clone Code
-        uses: actions/checkout@v2
-
-      - name: Mount Dev-Dependencies Cache
-        uses: actions/cache@v3
-        with:
-          key: cache-dependencies
-          path: |
-            src/Resources/app/administration/node_modules
-            src/Resources/app/storefront/node_modules
-            vendor
-
-      - name: Run Stylelint
-        run: make stylelint -B
+  javascript:
+    uses: ./.github/workflows/pipeline_js.yml
+    needs: [ install ]
 
   # ------------------------------------------------------------------------------------------------------------------------
 
-  php_tests:
+  php:
     uses: ./.github/workflows/pipeline_php.yml
     needs: [ install ]
 
   # ------------------------------------------------------------------------------------------------------------------------
 
   build:
-    name: Build Plugin
-    runs-on: ubuntu-latest
-    steps:
-      - name: Clone Code
-        uses: actions/checkout@v2
-
-      - name: Create Cache Directories
-        run: |
-          mkdir -p ~/.build
-
-      - name: Mount Build Cache
-        id: cache-build
-        uses: actions/cache@v3
-        with:
-          key: cache-plugin
-          path: ~/.build
-
-      - name: Start Docker
-        run: |
-          docker run --rm --name shop -d dockware/dev:$BUILD_SW_VERSION
-          sleep 20
-          docker logs shop
-
-      - name: Update Shopware Config
-        run: |
-          docker exec shop bash -c 'sed -i "s/APP_ENV=dev/APP_ENV=prod/g" /var/www/html/.env' || true;
-
-      - name: Upload into Docker
-        run: |
-          docker cp $(pwd)/. shop:/var/www/html/custom/plugins/MolliePayments
-          docker exec shop bash -c 'sudo chown www-data:www-data /var/www/html/custom/plugins -R'
-
-      - name: Build Plugin
-        run: |
-          docker exec shop bash -c 'cd /var/www/html/custom/plugins/MolliePayments && make release'
-
-      - name: Download ZIP File
-        run: |
-          docker cp shop:/var/www/html/custom/plugins/.build/MolliePayments.zip ~/.build/MolliePayments.zip
-
-      - name: Store ZIP file in Github
-        uses: actions/upload-artifact@v2
-        with:
-          name: MolliePaymentsRelease
-          retention-days: 4
-          path: ~/.build
+    uses: ./.github/workflows/pipeline_build.yml
 
   e2e:
     name: E2E Tests | Shopware ${{ matrix.shopware }}, PHP ${{ matrix.php }}
